Cached File Fix

--- a/image_crop.html
+++ b/image_crop.html
@@ -6,8 +6,8 @@
     <title>ExtJS Image Crop Test - ExtJS 4</title>
 	  <script src="http://extjs.cachefly.net/ext-4.1.1-gpl/ext-all-debug.js"></script>
 	  <link rel="stylesheet" href="http://extjs.cachefly.net/ext-4.1.1-gpl/resources/css/ext-all.css">
-    <script type="text/javascript" src="Ext.ux.ImageCrop.js"></script>
-    <script type="text/javascript" src="Extamples.CropWindow.js"></script>
+    <script type="text/javascript" src="Ext.ux.ImageCrop.js?v=4"></script>
+    <script type="text/javascript" src="Extamples.CropWindow.js?v=4"></script>
     <style type="text/css">
       *{margin:0;padding:0;}
       h1,h2,h3,p{margin-bottom:10px;}
